--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Games-SGF-Tournament version 0.01_01
+Games-SGF-Tournament version 0.01_03
 ====================================
 
 Smart Go Format (SGF) is a file format used to store game records of
@@ -6,18 +6,25 @@ two player board games. This module used to collect tournament
 information from a set of SGF files and produce statistic HTML tables
 for creating WWW tournament pages.
 
+
 INSTALLATION
 
-To install this module type the following:
+To install this module, run the following commands:
 
-   perl Makefile.PL
-   make
-   make test
-   make install
+    perl Makefile.PL
+    make
+    make test
+    make install
+
+
+DEPENDENCIES
+
+None.
+
 
 COPYRIGHT AND LICENCE
 
-Copyright (C) 2005 by Al Nikolov
+Copyright (C) 2005, Al Nikolov
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
