--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Games-SGF-Tournament version 0.01_03
+Games-SGF-Tournament version 0.01
 ====================================
 
 Smart Go Format (SGF) is a file format used to store game records of
