Import of CLOWN/Games-SGF-Tournament-v0.1_5 from CPAN.
gitpan-cpan-distribution: Games-SGF-Tournament
gitpan-cpan-version:      v0.1_5
gitpan-cpan-path:         CLOWN/Games-SGF-Tournament-v0.1_5.tar.gz
gitpan-cpan-author:       CLOWN
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Games::SGF::Tournament.
 
+0.1_5     Wed Sep  7 19:02:30 MSD 2005
+          * Functionality tests with help of HTML::TreeBuilder
+
 0.1_4     Tue Aug 23 12:23:49 MSD 2005
           * Fix: wrong score counting
 
