Import of CLOWN/Games-SGF-Tournament-v1.0.0 from CPAN.
gitpan-cpan-distribution: Games-SGF-Tournament
gitpan-cpan-version:      v1.0.0
gitpan-cpan-path:         CLOWN/Games-SGF-Tournament-v1.0.0.tar.gz
gitpan-cpan-author:       CLOWN
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Games-SGF-Tournament version 0.1
+Games-SGF-Tournament version 1.0
 ====================================
 
 Smart Go Format (SGF) is a file format used to store game records of
@@ -26,7 +26,7 @@ or:
 
 DEPENDENCIES
 
-None.
+version
 
 
 COPYRIGHT AND LICENCE
