--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Games::SGF::Tournament.
 
+1.0       Fri Sep  9 18:31:28 MSD 2005
+          * Little dependencies correction
+          * Polishing functional tests
+
 0.1_5     Wed Sep  7 19:02:30 MSD 2005
           * Functionality tests with help of HTML::TreeBuilder
 
