Import of CLOWN/Games-SGF-Tournament-v1.1_1 from CPAN.
gitpan-cpan-distribution: Games-SGF-Tournament
gitpan-cpan-version:      v1.1_1
gitpan-cpan-path:         CLOWN/Games-SGF-Tournament-v1.1_1.tar.gz
gitpan-cpan-author:       CLOWN
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension Games::SGF::Tournament.
 
+1.1_1     Tue Sep 20 20:32:20 MSD 2005
+          * Much better parsing with help of Parse::RecDescent
+          * Reimplemented methods
+          * Fix: SGF acronym explanation
+          * New: CGI-like table attributes and captions
+
 1.0       Fri Sep  9 18:31:28 MSD 2005
           * Little dependencies correction
           * Polishing functional tests
