--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 Tasks must be done in the nearest future:
 
-- More control on tables design (caption, borders, columns etc)
-
-- Control on ties processing (currently, both sides get 0 points)
+- More control on tables design (headers, columns etc)
 
 - Primatity resolving (SOS etc)
+
+- More GMs
